--- a/client/src/pages/authentication/login/card.css
+++ b/client/src/pages/authentication/login/card.css
@@ -1,7 +1,7 @@
 .container-logo {
     display: none;
 }
-.card {
+.card-logo {
     box-shadow: 0 20px 20px rgba(0, 0, 0, 0.2), 0 0 50px rgba(0, 0, 0, 0.2);
     width: 40vh;
     min-height: 20vh;
